# services-app-prototype

./: .env-example  .gitignore  Justfile  README.md  pyproject.toml
deploy/: Dockerfile  compose-testing.yml  compose.yml
examples/: callback_example.py
src/: alembic.ini  entrypoint-app.sh  entrypoint-testing.sh  entrypoint-worker.sh
src/app/: main.py
src/app/api/: api_v1.py
src/app/core/: application.py  db_session.py  events.py  exception_handlers.py  init_db.py  scheduler.py  settings.py  startup.py  tasks_broker.py
src/app/core/events/: __init__.py  event_decorator.py  events_router.py
src/app/core/startup/: __init__.py  init_callbacks.py  init_db.py  init_scheduled_tasks.py  init_tasks.py
src/app/events/: init_callbacks.py  router.py  schemas.py
src/app/interfeces/: repository_protocol.py  service_protocol.py
src/app/modules/auth/: callbacks.py  dependencies.py  events.py  router.py  schemas.py  service.py  tasks.py
src/app/modules/develop/: __init__.py  routes.py  scheduler.py  tasks.py
src/app/modules/groups/: dependencies.py  exceptions.py  models.py  repository.py  (+4 more)
src/app/shared/: base_model.py  base_permission.py  base_repository.py  base_service.py  common_events.py  exceptions.py  model_mixins.py  pagination.py  query_params.py  type_aliases.py  utils.py
src/migrations/: env.py
src/migrations/versions/: 20260417_1144-96fec5ae0ce4_initial_migrations.py
tests/: conftest.py  test_admin.py  test_auth.py  test_groups.py  test_health.py  test_permissions.py  test_users.py
tests/fixtures/: __init__.py  groups.py  settings.py  users.py
(+17 files in other folders)
